# trabalho-introducao-engenharia-de-software-2

./: README.md
Documentação/: Diagramas.asta
Documentação/Casos de Uso/: PontosDeCasoDeUso.xlsx
Implementacao/: CMakeLists.txt  main.cpp
Implementacao/Controller/: Condutor_Controller.cpp  Condutor_Controller.h  Veiculo_Controller.cpp  Veiculo_Controller.h
Implementacao/DAO/: Condutor_DAO.cpp  Condutor_DAO.h  DAO.h  Infracao_DAO.cpp  Infracao_DAO.h  Veiculo_DAO.cpp  Veiculo_DAO.h
Implementacao/Model/: Condutor_Model.cpp  Condutor_Model.h  Infracao_Model.cpp  Infracao_Model.h  Veiculo_Model.cpp  Veiculo_Model.h
Implementacao/Resources/: CondutorData  en_US
Implementacao/View/: Condutor_View.cpp  Condutor_View.h  Menu.cpp  Menu.h  Utils.cpp  Utils.h  Veiculo_View.cpp  Veiculo_View.h
Programa/: config.prop
Programa/Resources/: en_US
